fix line break in mobile caption
closes #5

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -165,4 +165,8 @@ footer {
   .interior-hero, .desktop-exterior {
     display: none;
   }
+
+  figcaption br {
+    display: none;
+  }
 }
